--- a/django_project/templates/register.html
+++ b/django_project/templates/register.html
@@ -45,7 +45,8 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-5 d-none d-lg-block bg-register-image" style="background: url('https://ksksampath-glorious-goldfish-wr95g9974vp2g7xq-8000.preview.app.github.dev/static/img/undraw_posting_photo.svg');background-position: center;   background-size: cover;"></div>
+
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
@@ -88,10 +89,10 @@
                                     Register Account
                                 </a> -->
                                 <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
+                                <a href="https://accounts.google.com/v3/signin/identifier?dsh=S1208797081%3A1684335489300530&ifkv=Af_xneHF2I3O4A8MVQsNw5Ej6ZLwAKDft-yeUJWEwULN8RmlKLxB2a-eyyKiEnamM8H8BjUOv_0TTA&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
                                 </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                                <a href="https://www.facebook.com/login.php" class="btn btn-facebook btn-user btn-block">
                                     <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
                                 </a>
                             </form>
