--- a/django_project/templates/login_page.html
+++ b/django_project/templates/login_page.html
@@ -61,7 +61,7 @@
 					Don't have an account?<a href="/create_page">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+					<a href="/forgot_pass_page">Forgot your password?</a>
 				</div>
 			</div>
 		</div>
