--- a/templates/register.html
+++ b/templates/register.html
@@ -97,7 +97,7 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="/forgot_pass_page">Forgot Password?</a>
                             </div>
                             <div class="text-center">
                                 <a class="small" href="/login_check">Already have an account? Login!</a>
